<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:gravity="center"
        tools:context="com.lovejoy777.rommate.MainActivity"
        android:elevation="4dp"
        android:theme="@style/Base.Theme.Test">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background_material_light"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">




        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_material_light"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                card_view:cardBackgroundColor="@color/card_background"

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CardView_bootanim"
                android:elegantTextHeight="false"
                android:elevation="5dp"
                android:background="@color/card_background"
                android:backgroundTint="@color/card_background"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.59"
                    >

                    <TextView
                        android:textColor="@color/textColorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card1header"
                        android:id="@+id/textView4"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:textStyle="bold"
                        android:elevation="5dp" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card1"
                        android:id="@+id/textView5"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/text_color_secondary"
                        android:elevation="5dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="16dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardBackgroundColor="@color/card_background"

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CardView_fonts"
                android:elegantTextHeight="false"
                android:elevation="5dp"
                android:background="@color/card_background"
                android:backgroundTint="@color/card_background"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.59"
                    >

                    <TextView
                        android:textColor="@color/textColorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card2header"
                        android:id="@+id/textView6"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:textStyle="bold"
                        android:elevation="5dp" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card2"
                        android:id="@+id/textView7"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/text_color_secondary"
                        android:elevation="5dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="16dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardBackgroundColor="@color/card_background"

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CardView_manager"
                android:elegantTextHeight="false"
                android:elevation="5dp"
                android:background="@color/card_background"
                android:backgroundTint="@color/card_background"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.59"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card3header"
                        android:textColor="@color/textColorPrimary"
                        android:id="@+id/textView8"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:textStyle="bold"
                        android:elevation="5dp" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card3"
                        android:id="@+id/textView9"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/text_color_secondary"
                        android:elevation="5dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="16dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>